# onepiece

./: .gitignore  Cargo.toml  env.sh
data/: addr
examples/: basic_arc.rs  basic_array.rs  basic_async.rs  basic_attribute.rs  basic_attribute_common.rs  basic_borrow_ref.rs  basic_box.rs  basic_cast.rs  basic_class.rs  basic_closures.rs  basic_closures_anonymity.rs  basic_closures_input_parameters.rs  basic_closures_output_parameters.rs  basic_collections.rs  basic_constants.rs  basic_enum.rs  basic_error_iter_result.rs  basic_expr.rs  basic_file.rs  basic_file_read.rs  basic_file_system.rs  basic_file_write.rs  basic_flow_control.rs  basic_from_into.rs  basic_function.rs  basic_function_hof.rs  basic_generics.rs  basic_generics_assoc_items.rs  basic_generics_bounds.rs  basic_generics_fn.rs  basic_generics_impl.rs  basic_generics_phantom.rs  basic_generics_trait.rs  basic_generics_where.rs  basic_iterator.rs  basic_json.rs  basic_lifetime.rs  basic_lifetime_bounds.rs  basic_lifetime_coercion.rs  basic_lifetime_fn.rs  (+49 more)
examples/common/: procs_log.rs
examples/nlp/: procs_fst.rs  procs_strsim.rs  procs_suffix.rs  procs_whatlang.rs
src/: README.md  add_person.rs  lib.rs  list_people.rs  main.rs
src/protos/: addressbook.rs  mod.rs  simple.rs
tests/: test_simple.rs
